--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,8 @@
   "version": "1.0",
   "content_scripts": [{
     "css": ["/components/iframe-graph/iframe-graph.css", "styles.css"],
-    "js": ["insert-iframe-graph.js","jquery-3.3.1.min.js", "jquery.gsap.min.js", "TweenLite.min.js", "TweenMax.min.js", "TimelineLite.min.js", "/components/iframe-graph/iframe-graph.js", "materialdesign.js"],
-    "matches": ["https://google.com.sg/*", "https://www.google.com/*"]
+    "js": ["insert-iframe-graph.js", "/components/iframe-graph/iframe-graph.js"],
+    "matches": ["https://google.com.sg/search*", "https://www.google.com/search*"]
   }],
   "permissions": [],
   "content_security_policy": "script-src 'self' 'unsafe-eval';object-src 'self'",
@@ -16,10 +16,11 @@
     "assets/fonts/*",
     "*.svg",
     "*.SVG",
-    "*/iframe-graph.html"
+    "*/iframe-graph.html",
+    "*/iframe-graph.js"
   ],
   "background": {
-    "scripts": ["materialdesign.js", "jquery-3.3.1.min.js", "jquery.gsap.min.js", "TweenLite.min.js", "TweenMax.min.js", "TimelineLite.min.js"],
+    "scripts": ["insert-iframe-graph.js"],
     "persistent": true
   }
 }
