--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,7 @@
     ]
   },
   "permissions": [
+	"storage",
     "webNavigation",
     "activeTab",
     "tabs",
@@ -17,7 +18,6 @@
     "https://*/*"
 
   ],
-  "content_security_policy": "script-src 'self' 'unsafe-eval';object-src 'self'",
   "web_accessible_resources": [
     "assets/css/*",
     "assets/js/*",
@@ -25,8 +25,7 @@
     "*.svg",
     "*.SVG",
     "cytoscape.js",
-    "*/iframe-graph.html",
-    "styles.css"
+    "*/iframe-graph.html"
   ]
 
 }
